--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!--
   Hello!
   -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
+
   -
   Github Repo: https://github.com/cobiwave/simplefolio/
   Readme: https://github.com/cobiwave/simplefolio/README.md
   -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
+  For business & inquires, contact me -> jaiswalb220@gmail.com
 -->
 <!DOCTYPE html>
 <html lang="en" class="sr">
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,27 +18,22 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Bishal Kumar Jaiswal</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
     <meta name="description" content="[Your name here] | Developer" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="styles.scss" />
-    <script
-      defer
-      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
+    <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
     <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
+
   <body>
     <div id="top"></div>
 
@@ -46,14 +41,12 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Bishal Jaiswal</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Intermediate Developer
         </h1>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
-          >
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="https://github.com/IamBishaljaiswal">Know more</a>
         </p>
       </div>
     </section>
@@ -66,32 +59,32 @@
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
-              <img
-                alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="assets/profile.jpg"
-                alt="Profile Image"
-              />
+              <img alt="Profile Image" class="img-fluid rounded shadow-lg" height="auto" width="300px"
+                src="assets/profile.jpg" alt="Profile Image" />
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                Heubert leverages dual expertise in career advising and IT support to empower students and users alike.
+                As a Career Advisor, the focus is on guiding career transitions, providing tailored strategies for job
+                searches, and
+                connecting individuals to opportunities that align with their goals and strengths.
+                As an IT Support Officer, the role involves troubleshooting technical issues, managing system
+                operations, and ensuring
+                seamless hardware and software performance.
+                This work is underpinned by a Master's degree in Computer Software Engineering from Federation
+                University Australia
+                and certifications in CRM systems, fostering both technical and interpersonal growth.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                "Frankly, I just started my career as IT support as Fulltime in mean time i use to do coding for my
+                personal projects for learning and still learning, will be learning."
+                <br>Thank you
+                <br> Bishal Jaiswal
               </p>
               <span class="d-flex mt-3">
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
-                >
+                <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
                   View Resume
                 </a>
               </span>
@@ -112,47 +105,26 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Project- Unknown</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Will be publish soon...
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
+                <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                  See Live Soon
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
+                  No Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
+                  <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt">
+                    <img alt="Project Image" class="img-fluid" src="assets/project.jpg" />
                   </div>
                 </a>
               </div>
@@ -164,28 +136,36 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">C#- Project- Belfield Service Center-2020</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Belfield Service Centre (BSC), is an NSW based auto repair Centre which takes a classic old car and
+                    makes it look good. From the exterior to the engine, transmission and chassis, from major servicing
+                    to replacing a simple part, it does it all. The company policy is to provide outstanding service to
+                    customers. BSC had been providing vehicle inspection and preventative maintenance to its customers
+                    for a long time ago. They offer the highest quality customer service and will treat their automobile
+                    as if it is their own. In addition, there are a wide variety of problems that can occur with the
+                    vehicle, and Belfield Service Centre has the proper equipment and experience to locate, repair
+                    and/or replace the issue quickly and effectively. The Preventative Maintenance services provide
+                    maintenance service to ensure customer vehicle is safe and sound to protect them and their family.
+                    This project aims to create cloud-based (AWS) order management system that will be scalable and easy
+                    to use as per the need of the Belfield Service Centre.
+                    <br><br>
+                    I myself Bishal Kumar Jaiswal and I am one of the sem 8 students currently pursuing my final
+                    Master's project.
+                    moreover, I belong to Group-1, the assigned project "Belfield Service Centre Order Inventory & Parts
+                    Management".
+                    I am in my last semester, of course, "Master of Technology in Software Engineering".
+                    <br>Being a part of the Software Engineering team, I am more focused on the Frontend web designing
+                    and Backend database development part of my final assigned project. Besides a team member, I am
+                    actively doing the job as a Software Engineer as well as Software application Testing for my overall
+                    project duration.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
+                <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
+                <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="https://github.com/IamBishaljaiswal/Group-Project-2020/blob/main/Site.Master">
                   Source Code
                 </a>
               </div>
@@ -193,18 +173,9 @@
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
+                  <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt">
+                    <img alt="Project Image" class="img-fluid" src="assets/belfield.JPG" />
                   </div>
                 </a>
               </div>
@@ -216,27 +187,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Java- Script-Project- Maze game</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    A maze game based on chasing thief from one country location to another location.Furthermore, adding feature for guns,bomb in differ location and other equipments for fight.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
+                <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/IamBishaljaiswal/project-on-2019/blob/main/ice_video_20191001-172951.mp4">
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
+                <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="https://github.com/IamBishaljaiswal/project-on-2019">
                   Source Code
                 </a>
               </div>
@@ -244,18 +204,9 @@
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
+                  <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt">
+                    <img alt="Project Image" class="img-fluid" src="assets/project.jpg" />
                   </div>
                 </a>
               </div>
@@ -272,14 +223,9 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
-          >
+          <p class="contact-wrapper__text">Email:</p>
+          <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:jaiswalb220@gmail.com">Call to
+            Action</a>
         </div>
       </div>
     </section>
@@ -308,33 +254,7 @@
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
           © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer" 
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
-          >
+          <a rel="noreferrer" href="#https://github.com/IamBishaljaiswal" target="_blank">Bishal Jaiswal</a>
         </p>
       </div>
     </footer>
@@ -342,4 +262,5 @@
 
     <script defer type="module" src="index.js"></script>
   </body>
+
 </html>
